--- a/index.html
+++ b/index.html
@@ -1,61 +1,78 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Global Insights - Connecting World</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .navbar .navbar-nav {
-            flex: 1;
-            justify-content: space-between;
-            display: flex;
-        }
-        .navbar .form-inline {
-            margin-left: auto;
-        }
-        .centered-heading {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .container{
-          width: 80%;
-          margin: 100px auto 50px;
-          display: grid;
-          grid-template-columns: repeat(3, minmax(0, 1fr));
-          grid-template-rows: repeat(2, minmax(0, 1fr));
-          grid-gap: 30px;
-        }
-    </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Global Insights - Connecting World</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <script type="module" src="https://cdn.jsdelivr.net/npm/ldrs/dist/auto/lineSpinner.js"></script>
+      <style>
+         .navbar .navbar-nav {
+         flex: 1;
+         justify-content: space-between;
+         display: flex;
+         }
+         .navbar .form-inline {
+         margin-left: auto;
+         }
+         .centered-heading {
+         text-align: center;
+         margin-top: 20px;
+         }
+         .container {
+         width: 90%; 
+         max-width: 1200px;
+         margin-top: 50px;
+         display: grid;
+         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+         grid-gap: 30px;
+         place-items: center;
+         }
+         @media (max-width: 768px) {
+         .container {
+         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+         margin: 50px auto; 
+         grid-gap: 20px;
+         }
+         }
+      </style>
+   </head>
+   <body>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+         <div class="container-fluid">
             <nav class="navbar bg-body-tertiary">
-                <div class="container-fluid">
+               <div class="container-fluid">
                   <a class="navbar-brand" href="#">
-                    <img src="Fb6vmmRVSuSXoeDwO1f8Hw.jpeg" alt="Logo" width="50" height="50" style="border-radius: 5px;">
-                    Global Insights
+                  <img src="Fb6vmmRVSuSXoeDwO1f8Hw.jpeg" alt="Logo" width="50" height="50" style="border-radius: 5px;">
+                  Global Insights
                   </a>
-                </div>
-              </nav>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a id="currentDateLink" class="nav-link active" aria-current="page" href="#">Current Date</a>
-              </li>
-              <div id="">
-                <li class="nav-item">
-                  <p class="nav-link" id="weather"></p>
-                </li>
-              </div>
-          </div>
-        </div>
+               </div>
+            </nav>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <li class="nav-item">
+                  <a id="currentDateLink" class="nav-link active" aria-current="page" href="#">Current Date</a>
+               </li>
+               <div id="">
+                  <li class="nav-item">
+                     <p class="nav-link" id="weather"></p>
+                  </li>
+               </div>
+            </div>
+         </div>
       </nav>
-    <h1 class="centered-heading">Trending News</h1>
-    <div class="container" id="container">
-      
-    </div>
-    <script src="script.js"></script>
-  </body>
+      <h1 class="centered-heading">Trending News</h1>
+      <div class="container" id="container">
+        <div id="loader">
+          <l-line-spinner
+  size="40"
+  stroke="3"
+  speed="1"
+  color="black" 
+></l-line-spinner>
+
+        </div>
+      </div>
+      <script src="script.js"></script>
+   </body>
 </html>
